--- a/index.html
+++ b/index.html
@@ -1,168 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swiggy Clone | Full Experience</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <style>
-        .filter-btn { border: 1px solid #e2e8f0; padding: 8px 16px; border-radius: 20px; font-size: 14px; transition: all 0.2s; background: white; white-space: nowrap; }
-        .filter-btn.active { background: #334155; color: white; border-color: #334155; }
-        .no-scrollbar::-webkit-scrollbar { display: none; }
-        
-        /* Order Animation */
-        @keyframes bikeMove {
-            0% { transform: translateX(-100px); opacity: 0; }
-            50% { opacity: 1; }
-            100% { transform: translateX(100px); opacity: 0; }
-        }
-        .animate-bike { animation: bikeMove 2s linear infinite; }
-    </style>
+<meta charset="UTF-8">
+<title>Swiggy Clone</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
-<body class="bg-white font-sans text-gray-800">
 
-    <nav class="sticky top-0 z-50 bg-white shadow-sm px-6 md:px-16 py-4 flex flex-col md:flex-row justify-between items-center gap-4">
-        <div class="flex items-center space-x-6 w-full md:w-auto">
-            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/12/Swiggy_logo.svg/1200px-Swiggy_logo.svg.png" alt="Logo" class="h-8">
-            <div class="relative flex-grow md:w-80">
-                <input type="text" id="search-input" onkeyup="handleSearch()" placeholder="Search for restaurants..." 
-                       class="w-full bg-gray-100 border-none rounded-lg py-2 pl-10 pr-4 focus:ring-2 focus:ring-orange-400 outline-none text-sm">
-                <i class="fa-solid fa-magnifying-glass absolute left-3 top-2.5 text-gray-400 text-sm"></i>
-            </div>
-        </div>
-        <div class="relative cursor-pointer hover:text-orange-500 font-bold" onclick="toggleCart()">
-            <i class="fa-solid fa-cart-shopping"></i>
-            <span id="cart-count" class="absolute -top-2 -right-3 bg-orange-500 text-white text-[10px] rounded-full px-1.5">0</span>
-            <span class="ml-2">Cart</span>
-        </div>
-    </nav>
+<body class="bg-white">
 
-    <main class="max-w-7xl mx-auto px-4 py-8">
-        <section class="mb-10">
-            <h2 class="text-2xl font-bold mb-6">Top brands for you</h2>
-            <div class="flex space-x-8 overflow-x-auto pb-4 no-scrollbar text-center">
-                <div class="flex-shrink-0 cursor-pointer group">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_288,h_360/v1674029845/PC_Creative%20refresh/3D_folders/food/Biryani.png" class="w-32 h-32 rounded-full group-hover:scale-105 transition">
-                    <p class="mt-2 font-medium">Biryani</p>
-                </div>
-                <div class="flex-shrink-0 cursor-pointer group">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_288,h_360/v1674029856/PC_Creative%20refresh/3D_folders/food/Pizza.png" class="w-32 h-32 rounded-full group-hover:scale-105 transition">
-                    <p class="mt-2 font-medium">Pizza</p>
-                </div>
-                <div class="flex-shrink-0 cursor-pointer group">
-                    <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_288,h_360/v1674029848/PC_Creative%20refresh/3D_folders/food/Burger.png" class="w-32 h-32 rounded-full group-hover:scale-105 transition">
-                    <p class="mt-2 font-medium">Burgers</p>
-                </div>
-            </div>
-        </section>
+<nav class="flex justify-between items-center p-4 shadow">
+  <h1 class="text-xl font-bold text-orange-500">Swiggy Clone</h1>
+  <div>
+    <a href="admin.html" class="text-sm font-bold">Admin</a>
+    <span id="cart-count" class="ml-4 bg-orange-500 text-white px-2 rounded">0</span>
+  </div>
+</nav>
 
-        <div class="flex space-x-3 overflow-x-auto pb-6 no-scrollbar">
-            <button onclick="filterItems('all')" class="filter-btn active" id="btn-all">All</button>
-            <button onclick="filterItems('veg')" class="filter-btn" id="btn-veg">Pure Veg</button>
-            <button onclick="filterItems('fast')" class="filter-btn" id="btn-fast">Fast Delivery</button>
-        </div>
+<main class="p-6 grid grid-cols-1 md:grid-cols-3 gap-6" id="restaurant-grid"></main>
 
-        <h2 class="text-2xl font-bold mb-6" id="section-title">Restaurants near you</h2>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8 mb-20" id="restaurant-grid"></div>
-    </main>
-
-    <footer class="bg-black text-white py-16 px-6 md:px-16">
-        <div class="max-w-7xl mx-auto grid grid-cols-2 md:grid-cols-4 gap-12">
-            <div>
-                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/1/12/Swiggy_logo.svg/1200px-Swiggy_logo.svg.png" class="h-8 brightness-200 mb-6">
-                <p class="text-gray-400">© 2024 Bundl Technologies Pvt. Ltd</p>
-            </div>
-            <div>
-                <h4 class="font-bold mb-4">Company</h4>
-                <ul class="text-gray-400 space-y-2"><li>About</li><li>Careers</li><li>Team</li><li>Swiggy One</li></ul>
-            </div>
-            <div>
-                <h4 class="font-bold mb-4">Contact us</h4>
-                <ul class="text-gray-400 space-y-2"><li>Help & Support</li><li>Partner with us</li><li>Ride with us</li></ul>
-            </div>
-            <div>
-                <h4 class="font-bold mb-4">Available in</h4>
-                <ul class="text-gray-400 space-y-2"><li>Bangalore</li><li>Gurgaon</li><li>Hyderabad</li><li>Mumbai</li></ul>
-            </div>
-        </div>
-    </footer>
-
-    <div id="cart-modal" class="fixed inset-0 bg-black/50 hidden z-[100] flex items-center justify-center p-4">
-        <div class="bg-white w-full max-w-md p-6 rounded-2xl shadow-2xl relative">
-            <div id="cart-view">
-                <div class="flex justify-between items-center mb-4 border-b pb-4">
-                    <h2 class="text-xl font-bold">Your Order</h2>
-                    <button onclick="toggleCart()" class="text-2xl">&times;</button>
-                </div>
-                <div id="cart-list" class="space-y-4 mb-4"></div>
-                <div class="border-t pt-4">
-                    <div class="flex justify-between font-bold text-lg"><span>Total Bill</span><span id="total-price">₹0</span></div>
-                    <button onclick="placeOrder()" class="w-full bg-orange-500 text-white py-3 rounded-lg mt-6 font-bold uppercase">Place Order</button>
-                </div>
-            </div>
-            <div id="success-view" class="hidden text-center py-10">
-                <div class="text-6xl mb-4 animate-bike text-orange-500"><i class="fa-solid fa-motorcycle"></i></div>
-                <h2 class="text-2xl font-bold text-green-600">Order Placed!</h2>
-                <p class="text-gray-500 mt-2">Our delivery partner is on the way.</p>
-                <button onclick="toggleCart()" class="mt-6 text-orange-500 font-bold">Back to Menu</button>
-            </div>
-        </div>
+<!-- MENU MODAL -->
+<div id="menu-modal" class="fixed inset-0 bg-black/50 hidden flex items-center justify-center">
+  <div class="bg-white p-6 rounded-xl w-96">
+    <div class="flex justify-between mb-4">
+      <h2 id="menu-title" class="font-bold text-xl"></h2>
+      <button onclick="closeMenu()">✕</button>
     </div>
+    <div id="menu-list" class="space-y-3"></div>
+  </div>
+</div>
 
-    <script>
-        const restaurants = [
-            { id: 1, name: "Pizza Hut", rating: 4.2, time: 25, type: "non-veg", price: 300, img: "https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_660/RX_THUMBNAIL/IMAGES/VENDOR/2024/7/16/5b9c53df-e0cb-48fc-a85a-7f1b60e7ca1a_750580.jpg" },
-            { id: 2, name: "Green Leaf", rating: 4.5, time: 20, type: "veg", price: 200, img: "https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_660/RX_THUMBNAIL/IMAGES/VENDOR/2024/4/17/f46f4065-2766-4d00-8800-4f5ef49a379f_31273.JPG" }
-        ];
+<!-- CART -->
+<div class="fixed bottom-4 right-4 bg-white p-4 rounded-xl shadow w-64">
+  <h3 class="font-bold mb-2">Cart</h3>
+  <div id="cart-list" class="space-y-2"></div>
+  <p class="font-bold mt-2">Total: ₹<span id="total">0</span></p>
+</div>
 
-        let cart = [];
+<script>
+let restaurants = JSON.parse(localStorage.getItem("restaurants")) || [];
+let cart = [];
 
-        function displayRestaurants(data) {
-            const grid = document.getElementById('restaurant-grid');
-            grid.innerHTML = data.map(res => `
-                <div class="group cursor-pointer">
-                    <div class="relative overflow-hidden rounded-2xl aspect-[4/3]">
-                        <img src="${res.img}" class="h-full w-full object-cover group-hover:scale-105 transition duration-500">
-                        <button onclick="addToCart('${res.name}', ${res.price})" class="absolute bottom-3 right-3 bg-white px-5 py-1.5 rounded-lg shadow-lg font-bold text-green-600">ADD</button>
-                    </div>
-                    <div class="mt-3">
-                        <h3 class="font-bold text-lg">${res.name}</h3>
-                        <p class="text-gray-600">★ ${res.rating} • ${res.time} mins</p>
-                    </div>
-                </div>
-            `).join('');
-        }
+function displayRestaurants() {
+  const grid = document.getElementById("restaurant-grid");
+  grid.innerHTML = restaurants.map(r => `
+    <div class="border rounded-xl overflow-hidden cursor-pointer" onclick="openMenu('${r.name}')">
+      <img src="${r.img}" class="h-40 w-full object-cover">
+      <div class="p-3">
+        <h3 class="font-bold">${r.name}</h3>
+        <p>₹${r.price}</p>
+      </div>
+    </div>
+  `).join("");
+}
 
-        function addToCart(name, price) {
-            cart.push({ name, price });
-            document.getElementById('cart-count').innerText = cart.length;
-            updateCartModal();
-        }
+function openMenu(name) {
+  const res = restaurants.find(r => r.name === name);
+  document.getElementById("menu-title").innerText = name;
+  document.getElementById("menu-list").innerHTML =
+    res.menu.map(item => `
+      <div class="flex justify-between">
+        <span>${item.name}</span>
+        <button onclick="addToCart('${item.name}', ${item.price})"
+          class="bg-green-500 text-white px-3 rounded">ADD</button>
+      </div>
+    `).join("");
+  document.getElementById("menu-modal").classList.remove("hidden");
+}
 
-        function updateCartModal() {
-            const list = document.getElementById('cart-list');
-            const total = cart.reduce((sum, item) => sum + item.price, 0);
-            list.innerHTML = cart.map(item => `<div class="flex justify-between"><span>${item.name}</span><span>₹${item.price}</span></div>`).join('');
-            document.getElementById('total-price').innerText = "₹" + total;
-        }
+function closeMenu() {
+  document.getElementById("menu-modal").classList.add("hidden");
+}
 
-        function placeOrder() {
-            if(cart.length === 0) return alert("Cart is empty!");
-            document.getElementById('cart-view').classList.add('hidden');
-            document.getElementById('success-view').classList.remove('hidden');
-            cart = [];
-            document.getElementById('cart-count').innerText = "0";
-        }
+function addToCart(name, price) {
+  const item = cart.find(i => i.name === name);
+  if (item) item.qty++;
+  else cart.push({ name, price, qty: 1 });
+  updateCart();
+}
 
-        function toggleCart() {
-            const modal = document.getElementById('cart-modal');
-            modal.classList.toggle('hidden');
-            document.getElementById('cart-view').classList.remove('hidden');
-            document.getElementById('success-view').classList.add('hidden');
-        }
+function updateCart() {
+  const list = document.getElementById("cart-list");
+  let total = 0;
+  list.innerHTML = cart.map((i, idx) => {
+    total += i.price * i.qty;
+    return `
+      <div class="flex justify-between">
+        <span>${i.name} × ${i.qty}</span>
+        <button onclick="changeQty(${idx}, -1)">−</button>
+      </div>`;
+  }).join("");
+  document.getElementById("total").innerText = total;
+  document.getElementById("cart-count").innerText =
+    cart.reduce((s, i) => s + i.qty, 0);
+}
 
-        displayRestaurants(restaurants);
-    </script>
+function changeQty(i, c) {
+  cart[i].qty += c;
+  if (cart[i].qty <= 0) cart.splice(i, 1);
+  updateCart();
+}
+
+displayRestaurants();
+</script>
+
 </body>
 </html>
