--- a/index.html
+++ b/index.html
@@ -1,108 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
 <title>Swiggy Clone</title>
 <script src="https://cdn.tailwindcss.com"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<script src="data.js"></script>
 </head>
 
-<body class="bg-white">
+<body class="bg-gray-100">
+<h1 class="text-xl font-bold p-4 bg-white shadow">Swiggy Clone</h1>
 
-<nav class="flex justify-between items-center p-4 shadow">
-  <h1 class="text-xl font-bold text-orange-500">Swiggy Clone</h1>
-  <div>
-    <a href="admin.html" class="text-sm font-bold">Admin</a>
-    <span id="cart-count" class="ml-4 bg-orange-500 text-white px-2 rounded">0</span>
-  </div>
-</nav>
-
-<main class="p-6 grid grid-cols-1 md:grid-cols-3 gap-6" id="restaurant-grid"></main>
-
-<!-- MENU MODAL -->
-<div id="menu-modal" class="fixed inset-0 bg-black/50 hidden flex items-center justify-center">
-  <div class="bg-white p-6 rounded-xl w-96">
-    <div class="flex justify-between mb-4">
-      <h2 id="menu-title" class="font-bold text-xl"></h2>
-      <button onclick="closeMenu()">✕</button>
-    </div>
-    <div id="menu-list" class="space-y-3"></div>
-  </div>
-</div>
-
-<!-- CART -->
-<div class="fixed bottom-4 right-4 bg-white p-4 rounded-xl shadow w-64">
-  <h3 class="font-bold mb-2">Cart</h3>
-  <div id="cart-list" class="space-y-2"></div>
-  <p class="font-bold mt-2">Total: ₹<span id="total">0</span></p>
-</div>
+<div class="grid md:grid-cols-3 gap-4 p-6" id="app"></div>
 
 <script>
-let restaurants = JSON.parse(localStorage.getItem("restaurants")) || [];
-let cart = [];
+let data = getData();
+let cart=[];
 
-function displayRestaurants() {
-  const grid = document.getElementById("restaurant-grid");
-  grid.innerHTML = restaurants.map(r => `
-    <div class="border rounded-xl overflow-hidden cursor-pointer" onclick="openMenu('${r.name}')">
-      <img src="${r.img}" class="h-40 w-full object-cover">
-      <div class="p-3">
-        <h3 class="font-bold">${r.name}</h3>
-        <p>₹${r.price}</p>
-      </div>
-    </div>
-  `).join("");
-}
-
-function openMenu(name) {
-  const res = restaurants.find(r => r.name === name);
-  document.getElementById("menu-title").innerText = name;
-  document.getElementById("menu-list").innerHTML =
-    res.menu.map(item => `
-      <div class="flex justify-between">
-        <span>${item.name}</span>
-        <button onclick="addToCart('${item.name}', ${item.price})"
-          class="bg-green-500 text-white px-3 rounded">ADD</button>
-      </div>
-    `).join("");
-  document.getElementById("menu-modal").classList.remove("hidden");
-}
-
-function closeMenu() {
-  document.getElementById("menu-modal").classList.add("hidden");
-}
-
-function addToCart(name, price) {
-  const item = cart.find(i => i.name === name);
-  if (item) item.qty++;
-  else cart.push({ name, price, qty: 1 });
-  updateCart();
-}
-
-function updateCart() {
-  const list = document.getElementById("cart-list");
-  let total = 0;
-  list.innerHTML = cart.map((i, idx) => {
-    total += i.price * i.qty;
-    return `
-      <div class="flex justify-between">
-        <span>${i.name} × ${i.qty}</span>
-        <button onclick="changeQty(${idx}, -1)">−</button>
-      </div>`;
-  }).join("");
-  document.getElementById("total").innerText = total;
-  document.getElementById("cart-count").innerText =
-    cart.reduce((s, i) => s + i.qty, 0);
-}
-
-function changeQty(i, c) {
-  cart[i].qty += c;
-  if (cart[i].qty <= 0) cart.splice(i, 1);
-  updateCart();
-}
-
-displayRestaurants();
+app.innerHTML = data.map(r=>`
+<div class="bg-white rounded shadow">
+  <img src="${r.images[0]}"
+   onerror="this.src='https://via.placeholder.com/400x300'"
+   class="h-40 w-full object-cover rounded-t">
+  <div class="p-4">
+    <h3 class="font-bold">${r.name}</h3>
+    <p>₹${r.price}</p>
+    <button onclick="cart.push(${r.price})"
+      class="bg-green-500 text-white px-3 py-1 mt-2 rounded">
+      ADD
+    </button>
+  </div>
+</div>`).join("");
 </script>
-
 </body>
 </html>
