--- a/admin.html
+++ b/admin.html
@@ -3,29 +3,23 @@
 <head>
 <title>Admin Login</title>
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="auth.js"></script>
 </head>
 
-<body class="flex items-center justify-center h-screen bg-gray-100">
-
-<div class="bg-white p-6 rounded-xl w-80 shadow">
-  <h2 class="text-xl font-bold mb-4">Admin Login</h2>
-
-  <input id="u" placeholder="Username" class="border p-2 w-full mb-3">
-  <input id="p" type="password" placeholder="Password" class="border p-2 w-full mb-4">
-
-  <button onclick="login()" class="bg-orange-500 text-white w-full py-2 rounded">
-    Login
-  </button>
+<body class="flex h-screen items-center justify-center bg-gray-100">
+<div class="bg-white p-6 w-80 rounded shadow">
+  <h2 class="font-bold text-xl mb-4">Admin Login</h2>
+  <input id="u" class="border p-2 w-full mb-3" placeholder="Username">
+  <input id="p" type="password" class="border p-2 w-full mb-3" placeholder="Password">
+  <button onclick="go()" class="bg-black text-white w-full py-2">Login</button>
 </div>
 
 <script>
-function login() {
-  if (u.value === "admin" && p.value === "admin123") {
-    localStorage.setItem("role", "admin");
-    window.location.href = "dashboard.html";
+function go(){
+  if(login(u.value,p.value)){
+    location.href="dashboard.html";
   } else alert("Invalid credentials");
 }
 </script>
-
 </body>
 </html>
