--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Swiggy Clone</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="data.js"></script>
+  <meta charset="UTF-8">
+  <title>Swiggy Clone</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
- 
-<body class="bg-gray-100">
-<h1 class="text-xl font-bold p-4 bg-white shadow">Swiggy Clone</h1>
 
-<div class="grid md:grid-cols-3 gap-4 p-6" id="app"></div>
+<body class="bg-gray-100">
+
+<header class="bg-white shadow p-4 text-xl font-bold">
+  Swiggy Clone
+</header>
+
+<div id="list" class="p-6 grid grid-cols-1 md:grid-cols-3 gap-6"></div>
 
 <script>
-let data = getData();
-let cart=[];
+const data = JSON.parse(localStorage.getItem("restaurants")) || [];
 
-app.innerHTML = data.map(r=>`
-<div class="bg-white rounded shadow">
-  <img src="${r.images[0]}"
-   onerror="this.src='https://via.placeholder.com/400x300'"
-   class="h-40 w-full object-cover rounded-t">
-  <div class="p-4">
-    <h3 class="font-bold">${r.name}</h3>
-    <p>₹${r.price}</p>
-    <button onclick="cart.push(${r.price})"
-      class="bg-green-500 text-white px-3 py-1 mt-2 rounded">
-      ADD
-    </button>
+document.getElementById("list").innerHTML = data.map(r => `
+  <div class="bg-white rounded shadow">
+    <img src="${r.img}"
+         onerror="this.src='https://via.placeholder.com/400x300?text=No+Image'"
+         class="h-40 w-full object-cover rounded-t">
+    <div class="p-4">
+      <h3 class="font-bold text-lg">${r.name}</h3>
+      <p class="text-gray-600">₹${r.price}</p>
+      <button class="mt-3 bg-green-500 text-white px-4 py-1 rounded">
+        ADD
+      </button>
+    </div>
   </div>
-</div>`).join("");
+`).join("");
 </script>
+
 </body>
 </html>
